--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.0-next.17",
+    "@react-navigation/stack": "^6.0.0-next.29",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "mobx": "^6.3.2",
+    "mobx-react-lite": "^3.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
