--- a/package.json
+++ b/package.json
@@ -8,39 +8,39 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.0-next.17",
-    "@react-navigation/stack": "^6.0.0-next.29",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.6",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "intl": "^1.2.5",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-dotenv": "^3.1.1",
+    "react-native-dotenv": "^3.2.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-google-places-autocomplete": "^2.2.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "^0.28.0",
     "react-native-maps-directions": "^1.8.0",
     "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-safe-area-context": "^3.3.0",
+    "react-native-screens": "~3.5.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@babel/core": "^7.15.0",
+    "@types/react": "~17.0.17",
+    "@types/react-native": "~0.64.13",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "~4.0.0"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
