--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-maps": "^0.28.0",
+    "react-native-maps": "0.28.0",
     "react-native-maps-directions": "^1.8.0",
     "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "^3.3.0",
-    "react-native-screens": "~3.5.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
+    "@babel/core": "~7.15.0",
     "@types/react": "~17.0.17",
     "@types/react-native": "~0.64.13",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
